--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "nyc": "^15.0.1",
     "ts-node": "^8",
     "tslint": "^5",
-    "typescript": "~3.3"
+    "typescript": "^3"
   },
   "engines": {
     "node": ">=8.0.0"
