--- a/package.json
+++ b/package.json
@@ -6,33 +6,53 @@
   "description": "SFDX CLI plugin for Apexlink Salesforce metadata analysis library",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@oclif/command": "^1",
-    "@oclif/config": "^1",
-    "@oclif/errors": "^1",
-    "@salesforce/command": "^3.0.0",
-    "@salesforce/core": "^2.3.0",
+    "@oclif/command": "^1.8.3",
+    "@oclif/config": "^1.17.1",
+    "@oclif/errors": "^1.3.5",
+    "@salesforce/command": "^4.1.5",
+    "@salesforce/core": "^2.29.0",
+    "tslib": "^2.3.1",
     "locate-java-home": "1.1.2",
     "cross-spawn": "7.0.2"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1",
-    "@oclif/plugin-help": "^2",
-    "@oclif/test": "^1",
-    "@salesforce/dev-config": "1.4.1",
-    "@types/chai": "^4",
-    "@types/cross-spawn": "^6.0.0",
-    "@types/mocha": "^5",
-    "@types/node": "^10",
-    "chai": "^4",
-    "globby": "^8",
-    "mocha": "^5",
-    "nyc": "^15.0.1",
-    "ts-node": "^8",
-    "tslint": "^5",
-    "typescript": "^3"
+    "@oclif/dev-cli": "^1.26.0",
+    "@oclif/plugin-help": "^3.2.5",
+    "@oclif/test": "^1.2.8",
+    "@salesforce/dev-config": "^2.1.2",
+    "@salesforce/dev-scripts": "^0.9.18",
+    "@salesforce/prettier-config": "^0.0.2",
+    "@salesforce/ts-sinon": "^1.3.21",
+    "@types/chai": "^4.2.22",
+    "@types/jsforce": "^1.9.35",
+    "@types/mocha": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "chai": "^4.3.4",
+    "eslint": "^8.2.0",
+    "eslint-config-oclif": "^4.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-salesforce": "^0.1.6",
+    "eslint-config-salesforce-typescript": "^0.2.8",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsdoc": "^37.0.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-typescript": "^0.14.0",
+    "globby": "^11",
+    "husky": "^7.0.4",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.2",
+    "sinon": "^12.0.1",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2",
+    "@types/cross-spawn": "6.0.2",
+    "@types/node": "17.0.18"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=12.0.0"
   },
   "files": [
     "/lib",
@@ -59,11 +79,12 @@
   },
   "repository": "nawforce/apexlink",
   "scripts": {
+    "build": "tsc -p .",
+    "lint": "eslint src/**/*.ts",
     "postpack": "rm -f oclif.manifest.json",
-    "posttest": "tslint -p test -t stylish",
+    "posttest": "eslint src/**/*.ts",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md",
+    "test": "nyc --extension .ts --require ts-node/register mocha --forbid-only \"test/**/*.test.ts\"",
     "maven": "(cd jars; mvn -DoutputDirectory=. dependency:copy-dependencies -DincludeScope=runtime;)"
   }
 }
