--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@salesforce/core": "^2.29.0",
     "tslib": "^2.3.1",
     "locate-java-home": "1.1.2",
-    "cross-spawn": "7.0.2"
+    "cross-spawn": "7.0.2",
+    "decompress": "4.2.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
@@ -49,7 +50,8 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "@types/cross-spawn": "6.0.2",
-    "@types/node": "17.0.18"
+    "@types/node": "17.0.18",
+    "@types/decompress": "4.2.1"
   },
   "engines": {
     "node": ">=12.0.0"
