--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@oclif/errors": "^1.3.5",
     "@salesforce/command": "^4.1.5",
     "@salesforce/core": "^2.29.0",
-    "tslib": "^2.3.1",
-    "locate-java-home": "1.1.2",
     "cross-spawn": "7.0.2",
-    "decompress": "4.2.1"
+    "decompress": "4.2.1",
+    "fast-xml-parser": "^4.0.4",
+    "locate-java-home": "1.1.2",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
@@ -25,8 +26,11 @@
     "@salesforce/prettier-config": "^0.0.2",
     "@salesforce/ts-sinon": "^1.3.21",
     "@types/chai": "^4.2.22",
+    "@types/cross-spawn": "6.0.2",
+    "@types/decompress": "4.2.1",
     "@types/jsforce": "^1.9.35",
     "@types/mocha": "^9.0.0",
+    "@types/node": "17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "chai": "^4.3.4",
@@ -48,10 +52,7 @@
     "pretty-quick": "^3.1.2",
     "sinon": "^12.0.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
-    "@types/cross-spawn": "6.0.2",
-    "@types/node": "17.0.18",
-    "@types/decompress": "4.2.1"
+    "typescript": "^4.5.2"
   },
   "engines": {
     "node": ">=12.0.0"
