--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "description": "SFDX CLI plugin for Apexlink Salesforce metadata analysis library",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@oclif/command": "^1.8.3",
-    "@oclif/config": "^1.17.1",
-    "@oclif/errors": "^1.3.5",
-    "@salesforce/command": "^4.1.5",
-    "@salesforce/core": "^2.29.0",
+    "@oclif/command": "1.8.3",
+    "@oclif/config": "1.17.1",
+    "@oclif/errors": "1.3.5",
+    "@salesforce/command": "4.1.5",
+    "@salesforce/core": "2.29.0",
+    "apexlink-gulp": "1.0.0",
     "cross-spawn": "7.0.2",
     "decompress": "4.2.1",
-    "fast-xml-parser": "^4.0.4",
-    "locate-java-home": "1.1.2",
-    "tslib": "^2.3.1"
+    "fast-xml-parser": "4.0.4",
+    "locate-java-home": "1.1.2"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
