--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apexlink",
-  "version": "2.3.5",
+  "version": "2.3.7",
   "author": "Kevin Jones <nawforce@gmail.com> (https://github.com/nawforce)",
   "bugs": "https://github.com/nawforce/apexlink/issues",
   "description": "SFDX CLI plugin for Apexlink Salesforce metadata analysis library",
@@ -11,7 +11,7 @@
     "@oclif/errors": "1.3.5",
     "@salesforce/command": "4.1.5",
     "@salesforce/core": "2.29.0",
-    "apexlink-gulp": "1.2.0",
+    "apexlink-gulp": "1.3.0",
     "cross-spawn": "7.0.2",
     "decompress": "4.2.1",
     "fast-xml-parser": "4.0.4",
@@ -82,7 +82,8 @@
   },
   "repository": "nawforce/apexlink",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "npm run maven && npm run compile",
+    "compile": "tsc -p .",
     "lint": "eslint src/**/*.ts",
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint src/**/*.ts",
