--- a/package.json
+++ b/package.json
@@ -18,41 +18,40 @@
     "locate-java-home": "1.1.2"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1.26.0",
-    "@oclif/plugin-help": "^3.2.5",
-    "@oclif/test": "^1.2.8",
-    "@salesforce/dev-config": "^2.1.2",
-    "@salesforce/dev-scripts": "^0.9.18",
-    "@salesforce/prettier-config": "^0.0.2",
-    "@salesforce/ts-sinon": "^1.3.21",
-    "@types/chai": "^4.2.22",
+    "@oclif/dev-cli": "1.26.0",
+    "@oclif/plugin-help": "3.2.5",
+    "@oclif/test": "1.2.8",
+    "@salesforce/dev-config": "2.1.2",
+    "@salesforce/dev-scripts": "0.9.18",
+    "@salesforce/prettier-config": "0.0.2",
+    "@salesforce/ts-sinon": "1.3.21",
+    "@types/chai": "4.2.22",
     "@types/cross-spawn": "6.0.2",
     "@types/decompress": "4.2.1",
-    "@types/jsforce": "^1.9.35",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "9.0.0",
     "@types/node": "17.0.18",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "chai": "^4.3.4",
-    "eslint": "^8.2.0",
-    "eslint-config-oclif": "^4.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-salesforce": "^0.1.6",
-    "eslint-config-salesforce-typescript": "^0.2.8",
-    "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsdoc": "^37.0.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-typescript": "^0.14.0",
-    "globby": "^11",
-    "husky": "^7.0.4",
-    "mocha": "^9.1.3",
-    "nyc": "^15.1.0",
-    "prettier": "^2.4.1",
-    "pretty-quick": "^3.1.2",
-    "sinon": "^12.0.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "@typescript-eslint/parser": "5.4.0",
+    "chai": "4.3.4",
+    "eslint": "8.2.0",
+    "eslint-config-oclif": "4.0.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-salesforce": "0.1.6",
+    "eslint-config-salesforce-typescript": "0.2.8",
+    "eslint-plugin-header": "3.1.1",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsdoc": "37.0.3",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-typescript": "0.14.0",
+    "globby": "11",
+    "husky": "7.0.4",
+    "mocha": "9.1.3",
+    "nyc": "15.1.0",
+    "prettier": "2.4.1",
+    "pretty-quick": "3.1.2",
+    "sinon": "12.0.1",
+    "ts-node": "10.4.0",
+    "typescript": "4.5.2"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -82,7 +81,7 @@
   },
   "repository": "nawforce/apexlink",
   "scripts": {
-    "build": "npm run maven && npm run compile",
+    "build": "yarn run maven && yarn run compile",
     "compile": "tsc -p .",
     "lint": "eslint src/**/*.ts",
     "postpack": "rm -f oclif.manifest.json",
